<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/share"
        android:visible="true"/>
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/file_ic_cut"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/cut"
        android:visible="true"/>
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/file_ic_copy"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/copy"
        android:visible="true"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/file_ic_delete"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/delete"
        android:visible="true"/>
    <item
        android:id="@+id/action_selectAll"
        android:icon="@drawable/file_ic_select_all"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/select_all"
        android:visible="true"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/file_ic_about"
        android:orderInCategory="40"
        android:showAsAction="always"
        android:title="@string/file_info"/>

</menu>