<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#333333" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/wifi_state"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/wifi_state"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5px"
                android:singleLine="true"
                android:text="@string/wifi_state"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/wifi_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/instruction_pre"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction_pre"
                android:visibility="gone" />

            <TextView
                android:id="@+id/instruction"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction" />

            <TextView
                android:id="@+id/ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15px"
                android:background="@drawable/ui_file_remote_start"
                android:gravity="center"
                android:minWidth="150px"
                android:paddingLeft="15px"
                android:paddingRight="15px"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="32px"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/start_stop_button"
                android:layout_width="274px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20px"
                android:layout_marginTop="20px"
                android:background="@drawable/ui_file_remote_start"
                android:gravity="center" >

                <TextView
                    android:id="@+id/start_stop_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10px"
                    android:gravity="center"
                    android:textSize="28px" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.tchip.carlauncher.view.ButtonFloat
        android:id="@+id/btnToFileFromFileRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="#1E88E5" />

</RelativeLayout>